--- a/Caopanhia/app/src/main/AndroidManifest.xml
+++ b/Caopanhia/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -12,6 +16,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Caopanhia"
         tools:targetApi="31">
+<!--       TODO: para iniciar esta atividade, no final deve voltar a colocar o intent-filter na LoginActivity-->
+        <activity
+            android:name=".API"
+
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".VetMainActivity"
             android:exported="false">
