--- a/Caopanhia/app/build.gradle
+++ b/Caopanhia/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
 }
 
+
 android {
     namespace 'com.example.caopanhia'
     compileSdk 32
@@ -26,7 +27,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
+
 }
+
 
 dependencies {
 
@@ -38,4 +43,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation('org.eclipse.paho:org.eclipse.paho.android.service:1.0.2')
 }
