--- a/Caopanhia/app/src/main/AndroidManifest.xml
+++ b/Caopanhia/app/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".DetalhesPackagesActivity"
+            android:exported="false"
+            android:parentActivityName=".DetalhesPackagesActivity">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".DetalhesAppointmentActivity"
             android:exported="false"
             android:parentActivityName=".DetalhesAppointmentActivity">
