--- a/Caopanhia/app/src/main/AndroidManifest.xml
+++ b/Caopanhia/app/src/main/AndroidManifest.xml
@@ -86,7 +86,8 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
+        <service android:name="org.eclipse.paho.android.service.MqttService" >
+        </service>
     </application>
 
 </manifest>
